# parser-combinator

./: .envrc  .gitignore  flake.nix  init.sh  setup_memo.md
megaparsec-example/: CHANGELOG.md  megaparsec-example.cabal
megaparsec-example/src/: ArithLex.hs
megaparsec-tutorial/: CHANGELOG.md  LICENSE  README.md  fourmolu.yaml  megaparsec-tutorial.cabal
megaparsec-tutorial/src/: MyLib.hs
megaparsec-tutorial/src/Example01/: ParserM.hs  Trivial.hs
megaparsec-tutorial/src/Example02/: MpPrac01.hs  MpPrac02.hs  ParserMT.hs
parser-demo/: CHANGELOG.md  parser-demo.cabal
parser-demo/src/: MyLib.hs  SimpleLexer.hs
parser-demo/src/Simple/Combinator/: Lexer.hs  Parser.hs
parser-demo/src/Simple/Combinator/Parser/: Internal.hs
parser-demo/src/Simple/Data/: AExp.hs
parser-demo/src/Simple/Eval/: AExp.hs
parser-demo/src/Simple/Parser/: SimpleParser.hs
parser-demo/test/: Main.hs
