cabal-version:      3.14
name:               parser-demo
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             shinokun
maintainer:         hypatia.tile02021@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall
library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   src
    default-language: GHC2021

executable parser-demo
    import:           warnings
    main-is:          LoxCli.hs
    build-depends:
        base ^>=4.20.2.0,
        parser-demo
    hs-source-dirs:   app
    default-language: GHC2021

test-suite parser-demo-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.2.0,
        parser-demo
